--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,5 @@
 asgiref==3.5.2
 autopep8==1.6.0
-black==22.6.0
-click==8.1.3
 Django==4.0.6
-djongo==1.3.6
-dnspython==2.2.1
-mypy-extensions==0.4.3
-pathspec==0.9.0
-platformdirs==2.5.2
-pycodestyle==2.8.0
-pymongo==3.12.1
-python-snappy==0.6.1
-pytz==2022.1
-sqlparse==0.2.4
-toml==0.10.2
-tomli==2.0.1
+python-dotenv==0.20.0
+sqlparse==0.4.2
